[gd_scene load_steps=16 format=2]

[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/return_to_title_player.gd" type="Script" id=2]
[ext_resource path="res://pieceBlue_border01.png" type="Texture" id=3]
[ext_resource path="res://pieceBlack_border00.png" type="Texture" id=4]
[ext_resource path="res://pieceGreen_border00.png" type="Texture" id=5]
[ext_resource path="res://piecePurple_border00.png" type="Texture" id=6]
[ext_resource path="res://pieceRed_border00.png" type="Texture" id=7]
[ext_resource path="res://pieceWhite_border00.png" type="Texture" id=8]
[ext_resource path="res://pieceYellow_border18.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 1 )

[node name="NewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 250.0
margin_top = 575.0
margin_right = 550.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
margin_left = 700.0
margin_top = 575.0
margin_right = 1000.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 2 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 405.0
margin_top = 62.3636
margin_right = 900.0
margin_bottom = 142.364
custom_fonts/font = SubResource( 3 )
text = "Number of Players"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 261.0
margin_top = 146.0
margin_right = 1020.0
margin_bottom = 238.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusPlayer" type="Button" parent="HBoxContainer"]
margin_right = 315.0
margin_bottom = 92.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "-"

[node name="Players" type="Label" parent="HBoxContainer"]
margin_left = 365.0
margin_top = 3.0
margin_right = 393.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 5 )
text = "1"

[node name="PlusPlayer" type="Button" parent="HBoxContainer"]
margin_left = 443.0
margin_right = 759.0
margin_bottom = 92.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "+"

[node name="Player" type="TextureRect" parent="."]
margin_left = 608.0
margin_top = 300.0
margin_right = 672.0
margin_bottom = 364.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="HBoxContainer" parent="."]
visible = false
margin_left = 566.0
margin_top = 300.0
margin_right = 714.0
margin_bottom = 364.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Player2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Player2"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="Player3" type="HBoxContainer" parent="."]
visible = false
margin_left = 524.0
margin_top = 300.0
margin_right = 756.0
margin_bottom = 364.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Player3"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Player3"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="Player3"]
margin_left = 168.0
margin_right = 232.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="Player4" type="HBoxContainer" parent="."]
visible = false
margin_left = 482.0
margin_top = 300.0
margin_right = 798.0
margin_bottom = 364.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Player4"]
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( -322.551, 411.147 )
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Player4"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="Player4"]
margin_left = 168.0
margin_right = 232.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="TextureRect4" type="TextureRect" parent="Player4"]
margin_left = 252.0
margin_right = 316.0
margin_bottom = 64.0
texture = ExtResource( 6 )

[node name="Player5" type="VBoxContainer" parent="."]
visible = false
margin_left = 482.0
margin_top = 300.0
margin_right = 522.0
margin_bottom = 340.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Player5"]
margin_right = 316.0
margin_bottom = 64.0
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Player5/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Player5/HBoxContainer"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="Player5/HBoxContainer"]
margin_left = 168.0
margin_right = 232.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="TextureRect4" type="TextureRect" parent="Player5/HBoxContainer"]
margin_left = 252.0
margin_right = 316.0
margin_bottom = 64.0
texture = ExtResource( 6 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Player5"]
margin_top = 84.0
margin_right = 316.0
margin_bottom = 148.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Player5/HBoxContainer2"]
margin_left = 126.0
margin_right = 190.0
margin_bottom = 64.0
texture = ExtResource( 7 )

[node name="Player6" type="VBoxContainer" parent="."]
visible = false
margin_left = 482.0
margin_top = 300.0
margin_right = 522.0
margin_bottom = 384.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Player6"]
margin_right = 316.0
margin_bottom = 64.0
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Player6/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Player6/HBoxContainer"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="Player6/HBoxContainer"]
margin_left = 168.0
margin_right = 232.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="TextureRect4" type="TextureRect" parent="Player6/HBoxContainer"]
margin_left = 252.0
margin_right = 316.0
margin_bottom = 64.0
texture = ExtResource( 6 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Player6"]
margin_top = 68.0
margin_right = 316.0
margin_bottom = 132.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Player6/HBoxContainer2"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="Player6/HBoxContainer2"]
margin_left = 168.0
margin_right = 232.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[node name="Player7" type="VBoxContainer" parent="."]
visible = false
margin_left = 482.0
margin_top = 300.0
margin_right = 522.0
margin_bottom = 340.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Player7"]
margin_right = 316.0
margin_bottom = 64.0
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Player7/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Player7/HBoxContainer"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="Player7/HBoxContainer"]
margin_left = 168.0
margin_right = 232.0
margin_bottom = 64.0
texture = ExtResource( 5 )

[node name="TextureRect4" type="TextureRect" parent="Player7/HBoxContainer"]
margin_left = 252.0
margin_right = 316.0
margin_bottom = 64.0
texture = ExtResource( 6 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Player7"]
margin_top = 84.0
margin_right = 316.0
margin_bottom = 148.0
custom_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Player7/HBoxContainer2"]
margin_left = 42.0
margin_right = 106.0
margin_bottom = 64.0
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="Player7/HBoxContainer2"]
margin_left = 126.0
margin_right = 190.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[node name="TextureRect3" type="TextureRect" parent="Player7/HBoxContainer2"]
margin_left = 210.0
margin_right = 274.0
margin_bottom = 64.0
texture = ExtResource( 9 )
[connection signal="pressed" from="BackButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="HBoxContainer/MinusPlayer" to="." method="_on_MinusYear_pressed"]
[connection signal="pressed" from="HBoxContainer/MinusPlayer" to="." method="_on_MinusPlayer_pressed"]
[connection signal="pressed" from="HBoxContainer/PlusPlayer" to="." method="_on_PlusYear_pressed"]
[connection signal="pressed" from="HBoxContainer/PlusPlayer" to="." method="_on_PlusPlayer_pressed"]
